2003-07-14  Moritz Schulte  <moritz@g10code.com>

	* register.c: Adjust cipher specification structure.

	* benchmark.c: New file.
	* testapi.c: New file.

	* Makefile.am (EXTRA_PROGRAMS): Set to: benchmark testapi.
	(check_PROGRAMS): Set to: $(TESTS).

2003-07-12  Moritz Schulte  <moritz@g10code.com>

	* ac.c, basic.c, keygen.c, register.c, sexp.c, tsexp.c: Used
	gcry_err* wrappers for libgpg symbols.

	* basic.c (check_ciphers): Added: GCRY_CIPHER_TWOFISH128.

2003-07-08  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (LIBS): Remove: -lpthread.

	* basic.c (check_one_cipher): Fix variable initialization.  Thanks
	to Simon Joseffson <jas@extundo.com>.

2003-07-07  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (TESTS): Added: register.

2003-07-05  Moritz Schulte  <moritz@g10code.com>

	* register.c (check_run): Adjusted for new gcry_cipher_register API.

2003-07-02  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (TESTS): Added: ac.
	* ac.c: New file.

2003-06-18  Werner Koch  <wk@gnupg.org>

	* basic.c (check_cbc_mac_cipher): Adjusted for new API of get_blklen
	and get_keylen.
	(check_ctr_cipher): Ditto.
	(check_one_cipher): Ditto.
	(check_one_md): Adjusted for new API of gcry_md_copy.

2003-06-18  Moritz Schulte  <moritz@g10code.com>

	* register.c: Replace old type GcryModule with newer one:
	gcry_module_t.
	Adjusted for new API.

	* Makefile.am (AM_CFLAGS): Added: @GPG_ERROR_CFLAGS@.

2003-06-15  Moritz Schulte  <moritz@g10code.com>

	* basic.c (get_keys_new): New function.
	(do_check_one_pubkey): New function ...
	(check_one_pubkey): ... use it.
	(progress_handler): New function.
	(main): Use gcry_set_progress_handler.

2003-06-14  Moritz Schulte  <moritz@g10code.com>

	* basic.c: Replaced calls to gcry_strerror with calls to
	gpg_strerror.
	(check_one_md): Adjust for new gcry_md_copy API.

	* tsexp.c: Likewise.
	* keygen.c: Likewise.

2003-06-12  Moritz Schulte  <moritz@g10code.com>
